@@ -1,3 +1,8 @@
+2008-06-20  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_init): New optional arguments host,
+	port, and encryption.
+
 2008-06-17  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPrinterAttributes): Enum-type
